feat: jpa support added